# Threat-Model

./: .gitignore  README.md  index.html  pyproject.toml  requirements.txt  threat-model-schema.json
.github/workflows/: deploy-reports.yml  static.yml
Captraex-Control-Center-V0/reports/: threat-model.html
Captraex-v0/reports/: threat-model.html
Captraex-website/reports/: threat-model.html
Meetsendai-Control-Center-V0/reports/: threat-model.html
SignalCaptureAI-Control-Center-V0/reports/: threat-model.html
Threat-Models-archive/captraex-V1/: threat-model.yaml
Threat-Models-archive/serverless-upload/: Serverless Upload & Processing Platform.md  threat-model.yaml
Threat-Models-archive/signalcaptureai-V1/: threat-model.yaml
astro-site/: astro.config.mjs  package-lock.json  package.json
byod-architecture/reports/: threat-model.html
examples/: AI assist.yaml  ai-assist-complete-guide.md  ai-assist-guidance.md  context.yaml  enhanced-testing-examples.yaml  enhanced-testing-guide.md  sample_transcript.txt  threat-model-generation-prompt.md
meetsendai-V1/reports/: threat-model.html
meetsendai-v0/reports/: threat-model.html
reports-output/: index.html
serverless-upload/reports/: threat-model.html
signalcaptureai-v0/reports/: threat-model.html
src/: __init__.py  analyzer.py  attack_tree.py  cli.py  cvss_calculator.py  dfd_generator.py  parser.py  report_generator.py  schemas.py
src/templates/: report.html
threat-models/: .gitkeep
threat-models/Captraex-Control-Center-V0/: threat-model.yaml
threat-models/Captraex-v0/: threat-model.yaml
threat-models/Captraex-website/: threat-model.yaml
threat-models/Meetsendai-Control-Center-V0/: threat-model.yaml
threat-models/SignalCaptureAI-Control-Center-V0/: threat-model.yaml
threat-models/byod-architecture/: threat-model.yaml
threat-models/composed/: threat-model.yaml
threat-models/control-center-v0/: threat-model.yaml
threat-models/github-page/: index.html
threat-models/meetsendai-V1/: threat-model.yaml
(+65 files in other folders)
